# gpu-msdf-font-rendering

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: CompilerWarnings.cmake
docs/: algorithm_writeup.md  gpu_algo_spec.md  gpu_algo_spec_rough.md
docs/diagrams/: glyph_dispatch.drawio
shaders/: colored_normals.hlsl  colored_triangle.hlsl  msdf_gen.hlsl  text.hlsl
src/: dx.cpp  dx.hpp  main.cpp  shaderWatcher.cpp  shaderWatcher.hpp  utils.cpp  utils.hpp
src/tests/: main.cpp  shaderWatcherTests.cpp
src/tests/testShaders/: compute.hlsl  pixel.hlsl  vert.hlsl
